PR/49691: KAMADA Ken'ichi: free deferred ptp mappings if present. XXX: pullup-7